--- a/android-plugin/build.gradle
+++ b/android-plugin/build.gradle
@@ -41,7 +41,7 @@ dependencies {
         build if it is included locally because it results in duplicate definitions for particular
         Unity player activities.
      */
-    compile group: 'com.unity', name: 'player', version: '1.0.0.1'
+    provided group: 'com.unity', name: 'player', version: '1.0.0.1'
 
     /*
      * The dependencies of the SDK artifact will be copied to the output directory in the packagePlugin
@@ -52,16 +52,12 @@ dependencies {
 
 task packagePlugin <<  {
 
-    // AndroidManifest.xml
-    copy {
-        from "$rootDir/android-plugin/plugin-dependencies"
-        into "$rootProject.buildDir/unity-plugin/Plugins/Android"
-    }
-
     // AAR dependencies
     copy {
         from (configurations.compile) {
             exclude 'player-*.jar' // Exclude the com.unity:player JAR
+            exclude '*25.1.0.aar' // Exclude support
+            exclude '*25.1.0.jar' // Exclude support annotations
         }
         into "$rootProject.buildDir/unity-plugin/Plugins/Android"
     }
@@ -74,6 +70,7 @@ task packagePlugin <<  {
     copy {
         from "$buildDir/outputs/aar/$project.name-release.aar"
         into "$rootProject.buildDir/unity-plugin/Plugins/Android"
+        rename "$project.name-release.aar", "zendesk-plugin.aar"
     }
 }
 
@@ -104,8 +101,7 @@ task stripCssFromAndroidSdk(type:Exec) {
 
 
     // This will work on Unix based systems with bash and zip available
-    commandLine 'bash', '-c', 'zip -d sdk-[0-9].[0-9]*.[0-9].[0-9].aar assets/help_center_article_style.css'
-
+    commandLine 'bash', '-c', 'zip -d sdk-[0-9].[0-9]*.[0-9].[0-9].aar assets/help_center_article_style.css res/values/values.xml'
 
     /*
         On Windows we don't have zip.exe out of the box, so you will have to install zip.exe or
